<resources>
    <string name="app_name">FinalPFG</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="string_preview">Preview</string>
    <string name="tv_log_text">Log de notificaciones capturadas</string>
    <string name="bluetooth_text">Bluetooth</string>
    <string name="text_visible">Hacer visible</string>
    <string name="text_list_devices">Listar dispositivos</string>
    <string name="text_off">Apagar</string>
    <string name="text_emparejados">Dispositivos emparejados:</string>
    <string name="text_on_off">Encender/Apagar</string>
    <string name="text_iconobt">IconoBt</string>
    <string name="text_btdevicename">DeviceName</string>
    <string name="text_btdeviceaddress">DeviceAddress</string>
    <string name="title_activity_settings_app_default">App no seleccionada</string>
    <string name="title_activity_settings_config">Configuración</string>
    <string name="text_nuevos_dispositivos">Dispositivos encontrados:</string>
    <string name="text_action_bt_buscar">Buscar dispositivos</string>
    <string name="title_connected_to">Conectado a</string>
    <string name="title_connecting">Conectando…</string>
    <string name="title_not_connected">No conectado</string>
    <string name="tv_log_default">RealTime Log</string>
    <string name="text_bt_visibility">Hacer dispositivo visible </string>
    <string name="text_vaciar_log">Vaciar LOG</string>
    <string name="text_action_save_log">Guardar LOG</string>
    <string name="text_icono_app">Icono App</string>
    <string name="text_app_name">Nombre App</string>
    <string name="text_app_package">Paquete App</string>
    <string name="title_activity_app_row">Selecciona App</string>
    <string name="action_save_app">Guardar</string>
    <string name="text_app_installed">Listar Apps</string>
    <string name="ib_toggle_app_installed">Desplegar listado</string>
    <string name="text_b_filtro">Filtrar</string>
    <string name="title_activity_notification_activity_test">NotificationActivityTest</string>
</resources>
