<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView android:id="@+id/btDeviceType"
        android:src="@mipmap/app"
        android:layout_alignParentLeft="true"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text_iconobt" />

    <TextView android:id="@+id/btDeviceName"
        android:layout_toRightOf="@id/btDeviceType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btdevicename"
        android:layout_marginTop="10dp" />

    <TextView android:id="@+id/btDeviceAddress"
        android:layout_below="@id/btDeviceName"
        android:layout_toRightOf="@id/btDeviceType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btdeviceaddress" />

</RelativeLayout>