<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.dlacalle.finalpfg.AppRowActivity">

    <Button
        android:id="@+id/b_filtro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true"
        android:background="#eeeeee"
        android:drawableEnd="@drawable/ic_action_app_filter"
        android:drawablePadding="5dp"
        android:gravity="left|center_vertical"
        android:onClick="setFilters"
        android:padding="5dp"
        android:text="@string/text_b_filtro"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/b_toggle_app_installed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:background="#eeeeee"
        android:contentDescription="@string/ib_toggle_app_installed"
        android:drawableLeft="@drawable/ic_action_show_list_apps"
        android:drawablePadding="5dp"
        android:gravity="left|center_vertical"
        android:onClick="getInstalledApps"
        android:padding="5dp"
        android:text="@string/text_app_installed"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lv_app_installed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b_toggle_app_installed" />

</RelativeLayout>
