<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BluetoothActivity"
    android:transitionGroup="false">

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sw_btOnOff"
        android:layout_alignParentStart="true"
        android:onClick="toggleBt"
        android:checked="false"
        android:width="180dp"
        android:text="@string/text_on_off" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_paired_frame"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sw_btOnOff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_emparejados"
            android:id="@+id/tv_paired"
            android:layout_alignParentStart="false"
            android:textSize="@dimen/abc_text_size_title_material"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:textStyle="bold"
            android:singleLine="false" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_paired_list"
            android:layout_below="@+id/tv_paired"
            android:layout_alignParentStart="false" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/bt_newdev_frame"
        android:layout_below="@+id/bt_paired_frame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nuevos_dispositivos"
            android:id="@+id/tv_new_devices"
            android:layout_alignParentStart="false"
            android:textSize="@dimen/abc_text_size_title_material"
            android:layout_alignParentEnd="false"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_newdevices_list"
            android:layout_below="@+id/tv_new_devices"
            android:layout_alignParentStart="false" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarBT"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="false"
            android:layout_toLeftOf="@+id/tv_new_devices" />

    </RelativeLayout>

</RelativeLayout>
